Freedom Sanbox Ant Deploy/src/objects/Vendor_del__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Mobile_Number__c</fullName>
        <label>Alternate Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Landline2__c</fullName>
        <label>Landline2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <label>Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ashwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suphia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Number__c</fullName>
        <label>Service Tax Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>